# vhdl-compat

./: .gitignore  MATRIX.md  README.md  hs_err_pid49440.dmp  matrix.md  pyproject.toml  run_all.bat  xvhdl.pb
.Xil/Vivado-10756-ws/wt/: synthesis.wdf
.Xil/Vivado-13616-ws/wt/: synthesis.wdf
.Xil/Vivado-15088-ws/wt/: synthesis.wdf
.Xil/Vivado-18828-ws/wt/: synthesis.wdf
.Xil/Vivado-28500-ws/wt/: synthesis.wdf
.Xil/Vivado-28572-ws/wt/: synthesis.wdf
.Xil/Vivado-2932-ws/wt/: synthesis.wdf
.Xil/Vivado-30140-ws/wt/: synthesis.wdf
.Xil/Vivado-31180-ws/wt/: synthesis.wdf
.Xil/Vivado-31272-ws/wt/: synthesis.wdf
.Xil/Vivado-31392-ws/wt/: synthesis.wdf
.Xil/Vivado-32488-ws/wt/: synthesis.wdf
.Xil/Vivado-33268-ws/wt/: synthesis.wdf
.Xil/Vivado-33696-ws/wt/: synthesis.wdf
docs/: ARCHITECTURE.md  contributing.md  modelsim-uvvm.md  plan.md  test-format.md  tool-config.md  tool-notes.md  user-guide.md  xsim-uvvm.md
results/: .gitkeep  altera_modelsim_starter-2020.1_sim.json  altera_questa_starter-2025.3_sim.json  matrix.md  vivado-2023.2_sim.json  vivado-2023.2_synth.json  vivado-2025.2_sim.json  vivado-2025.2_synth.json  vivado-2026.1_sim.json  vivado-2026.1_synth.json
scripts/: __init__.py  _add_rtl.py  _update_tests.py  generate_matrix.py  questa_adapter.py  report_generator.py  result_store.py  run_all.py  run_tests.py  test_discovery.py  tool_discovery.py  tool_runner.py  vivado_adapter.py
scripts/tests/: __init__.py  test_discovery.py
tests/: _TEMPLATE.vhd
tools/: installed.example.toml  modelsim.toml  questa.toml  vivado.toml
(+118 files in other folders)
